--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image: url("../public/background.jpg");
+  background-image: url("/background.jpg");
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
